تحديث الموقع وإضافة صورة جديدة

--- a/index.html
+++ b/index.html
@@ -51,15 +51,13 @@
   <div class="hero-profile profile-right fade-in">
     <div class="glow-card profile-card">
       <div class="profile-img-wrapper">
-        <img src="assets/images/profile.png" alt="Profile Picture">
+        <img src="assets/images/Dilar.jpg" alt="Profile Picture">
       </div>
       <h3 class="profile-name">Dilar Almaao</h3>
       <p class="profile-title">Software Engineer</p>
     </div>
   </div>
 </section>
-
-  <!-- About -->
   <section id="about" class="fade-up">
     <div class="container">
       <h2 class="section-title">About Me</h2>
@@ -69,25 +67,19 @@
       </div>
     </div>
   </section>
-
-  <!-- Skills -->
   <section id="skills" class="fade-up">
     <div class="container">
       <h2 class="section-title">Skills</h2>
       <p class="section-sub">Key technologies I use</p>
       <div class="row g-4">
-        <!-- Programming Languages -->
         <div class="col-lg-6">
           <div class="cardx p-3">
-
-
 <h5 class="mb-3">Programming Languages</h5>
             <div class="skill"><span>C#</span><div class="bar"><span data-w="90"></span></div><span>Advanced</span></div>
             <div class="skill"><span>C++</span><div class="bar"><span data-w="75"></span></div><span>Advanced</span></div>
             <div class="skill"><span>PHP</span><div class="bar"><span data-w="75"></span></div><span>Advanced</span></div>
           </div>
         </div>
-        <!-- Backend -->
         <div class="col-lg-6">
           <div class="cardx p-3">
             <h5 class="mb-3">Backend</h5>
@@ -99,7 +91,6 @@
             <div class="skill"><span>RESTful API</span><div class="bar"><span data-w="92"></span></div><span>Advanced</span></div>
           </div>
         </div>
-        <!-- Database -->
         <div class="col-lg-6">
           <div class="cardx p-3">
             <h5 class="mb-3">Database</h5>
@@ -108,7 +99,6 @@
             <div class="skill"><span>T-SQL</span><div class="bar"><span data-w="80"></span></div><span>Good</span></div>
           </div>
         </div>
-        <!-- Frontend -->
         <div class="col-lg-6">
           <div class="cardx p-3">
             <h5 class="mb-3">Frontend</h5>
@@ -116,7 +106,6 @@
             <div class="skill"><span>CSS</span><div class="bar"><span data-w="75"></span></div><span>Good</span></div>
           </div>
         </div>
-        <!-- Dev Tools -->
         <div class="col-lg-6">
           <div class="cardx p-3">
             <h5 class="mb-3">Dev Tools</h5>
@@ -126,7 +115,6 @@
             <div class="skill"><span>Swagger</span><div class="bar"><span data-w="78"></span></div><span>Good</span></div>
           </div>
         </div>
-        <!-- Core Skills -->
         <div class="col-lg-6">
           <div class="cardx p-3">
             <h5 class="mb-3">Core Skills</h5>
@@ -150,8 +138,6 @@
       </div>
     </div>
   </section>
-
-<!-- Projects -->
   <section id="projects" class="fade-up">
     <div class="container">
       <h2 class="section-title">Projects</h2>
@@ -184,8 +170,6 @@
       </div>
     </div>
   </section>
-
-  <!-- Contact -->
   <section id="contact" class="fade-up">
     <div class="container">
       <h2 class="section-title">Contact Me</h2>
