--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dilar Idris Almaao |Backend Developer</title>
-  <meta name="description" content="Portfolio of Mohammed Hamza Al-Hafez – Backend Developer specialized in ASP.NET Core and Laravel." />
+  <meta name="description" content="Portfolio of dilar-al-maoo-a98279290 – Backend Developer specialized in ASP.NET Core and Laravel." />
 
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -33,7 +33,7 @@
 <section id="home" class="container hero fade-up">
   <div class="hero-content">
     <div class="chip mb-3"><i class="bi bi-lightning-charge"></i> Backend Developer</div>
-    <h1 class="fw-bold mb-3">
+    <h1 class="fw-bold mb-3" title="about me">
      Hi I'm <span style="color: var(--pri)">Dilar Almaao</span>.<br/>
       I build robust and scalable backend applications .
     </h1>
@@ -147,7 +147,7 @@
           <div class="cardx h-100 p-3">
             <h5>Mini ERP System</h5>
             <p class="section-sub">Company Service and Billing Platform [Web Application For Al-mamo Group]</p>
-            <img src="assets/images/CSBP.jpg" class="img-fluid rounded mb-2" alt="Cinema Project" loading="lazy">
+            <img  src="assets/images/CSBP.jpg" class="img-fluid rounded mb-2" alt="Cinema Project" loading="lazy">
             <a href="https://github.com/ENGDILAR/Company-Service-and-Billing-Platform" target="_blank" class="btn btn-outline-light w-100"><i class="bi bi-github ms-1"></i> GitHub</a>
           </div>
         </div>
@@ -155,7 +155,7 @@
           <div class="cardx h-100 p-3">
             <h5>Hospital Management System</h5>
             <p class="section-sub">Hospital management system using Using Laravel </p>
-            <img src="assets/images/HMSCover.jpg" class="img-fluid rounded mb-2" alt="Hospital Project" loading="lazy">
+            <img style=" height: 450px; width: auto;" src="assets/images/HMSCover.jpg" class="img-fluid rounded mb-2" alt="Hospital Project" loading="lazy">
             <a href="https://github.com/ENGDILAR/Hospital_Management_System" target="_blank" class="btn btn-outline-light w-100"><i class="bi bi-github ms-1"></i> GitHub</a>
           </div>
         </div>
@@ -163,8 +163,8 @@
           <div class="cardx h-100 p-3">
             <h5>Driving License System</h5>
             <p  class="section-sub">Vehicle license and driver management system.</p>
-            <img src="assets/images/DVLDCover.jpg" class="img-fluid rounded mb-2" alt="DVLD Project" loading="lazy">
-            <a href="https://github.com/ENGDILAR/Driving-Vehicle-License-Department-DVLD" target="_blank" class="btn btn-outline-light w-100"><i class="bi bi-github ms-1"></i> GitHub</a>
+            <img style=" height: 450px; width: auto;" src="assets/images/DVLDCover.jpg" class="img-fluid rounded mb-2" alt="DVLD Project" loading="lazy">
+            <a href="https://github.com/ENGDILAR/Driving-Vehicle-License-Department-DVLD-" target="_blank" class="btn btn-outline-light w-100"><i class="bi bi-github ms-1"></i> GitHub</a>
           </div>
         </div>
       </div>
@@ -177,7 +177,7 @@
       <div class="cardx p-3">
         <p>📧 <a href="mailto:dilaralmio@gmail.com">dilaralmio@gmail.com</a></p>
         <p>🔗 <a href="https://github.com/ENGDILAR" target="_blank">GitHub</a></p>
-        <p>🔗 <a href="www.linkedin.com/in/dilar-al-maoo-a98279290" target="_blank">LinkedIn</a></p>
+        <p>🔗 <a href="https://www.linkedin.com/in/dilar-al-maoo-a98279290" target="_blank">LinkedIn</a></p>
       </div>
     </div>
   </section>
